# Toutui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  hello_toutui.sh  known_bugs.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  feature.yml  install_issue.yml  xfeature.yml
assets/: video_1.mkv
src/: app.rs  config.rs  db.sqlite3  login_app.rs  main.rs  old_main.rs
src/api/: auth.rs  libraries.rs  library_item.rs  mod.rs
src/api/libraries/: get_all_books.rs  get_all_libraries.rs  get_library_perso_view.rs  get_library_perso_view_pod.rs  mod.rs
src/api/library_items/: get_lib_item.rs  get_pod_ep.rs  mod.rs  play_lib_item_or_pod.rs
src/api/me/: get_media_progress.rs  mod.rs  update_media_progress.rs
src/api/server/: auth.rs  auth_process.rs  mod.rs
src/api/sessions/: close_open_session.rs  mod.rs  sync_open_session.rs
src/api/utils/: collect.rs  collect_get_all_books.rs  collect_get_all_libraries.rs  collect_get_media_progress.rs  collect_get_pod_ep.rs  collect_personalized_view.rs  collect_personalized_view_pod.rs  collect_play_lib_item_or_pod.rs  mod.rs
src/db/: crud.rs  database_struct.rs  db.rs  mod.rs
src/logic/: mod.rs
src/logic/auth/: auth.rs  auth_input.rs  mod.rs
src/logic/handle_input/: handle_l.rs  handle_l_book.rs  mod.rs  (+2 more)
src/player/: mod.rs  vlc.rs
src/ui/: login_tui.rs  mod.rs  player_tui.rs  player_ui.rs  tui.rs
src/utils/: changelog.rs  convert_seconds.rs  encrypt_token.rs  exit_app.rs  logs.rs  mod.rs  pop_up_message.rs  vlc_tcp_stream.rs
(+14 files in other folders)
