[package]
name = "Clisten"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
config = "0.15.6"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
