[package]
name = "Toutui"
version = "0.3.2-beta"
edition = "2021"

[dependencies]
openssl = "0.10.71"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
config = "0.15.6"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
vlc-rc = "0.1.1"
tui-textarea = "0.7.0"
rusqlite = "0.33.0"
regex = "1.11.1"
log = "0.4.25"
fern = "0.7.1"
chrono = "0.4.39"
magic-crypt = "4.0.1"
dotenv = "0.15.0"
dirs = "6.0.0"
